[package]
name = "confirm"
description = "A simple tool to obtain interactive confirmation in scripts."
license = "MIT"
homepage = "https://github.com/scruffystuffs/confirm"
repository = "https://github.com/scruffystuffs/confirm"
documentation = "https://github.com/scruffystuffs/confirm/README.md"
version = "0.1.0"
authors = ["Wesley Van Melle <van.melle.wes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
getch = "0.2"
structopt = "0.3"
