[package]
name = "confirm-rs"
description = "A simple tool to obtain interactive confirmation in scripts."
license = "Unlicense"
homepage = "https://github.com/scruffystuffs/confirm"
repository = "https://github.com/scruffystuffs/confirm"
documentation = "https://github.com/scruffystuffs/confirm/README.md"
version = "0.1.1"
authors = ["Wesley Van Melle <van.melle.wes@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
atty = "0.2"
getch = "0.2"
structopt = "0.3"

[[bin]]
name = "confirm"
path = "src/main.rs"
