[package]
name = "confirm-rs"
description = "A simple tool to obtain interactive confirmation in scripts."
license = "Unlicense"
homepage = "https://github.com/scruffystuffs/confirm"
repository = "https://github.com/scruffystuffs/confirm"
documentation = "https://github.com/scruffystuffs/confirm/README.md"
version = "1.0.0"
authors = ["Wesley Van Melle <van.melle.wes@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
atty = "0.2.14"
clap = { version = "3.1.12", features = ["derive", "cargo"] }
getch = "0.3.1"

[[bin]]
name = "confirm"
path = "src/main.rs"
